--- a/.github/workflows/Merge-upstream.yml
+++ b/.github/workflows/Merge-upstream.yml
@@ -11,7 +11,7 @@ name: Merge-upstream
 on:
   push:
     branches: 
-      - master
+      - main
   schedule:
     - cron: 30 19 * * *
 
@@ -26,7 +26,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
       with:
-        ref: master
+        ref: main
         fetch-depth: 0
         lfs: true
 
@@ -49,5 +49,5 @@ jobs:
         fi
     - name: Push Commits
       env:
-        DOWNSTREAM_BRANCH: master
+        DOWNSTREAM_BRANCH: main
       run: git push origin $DOWNSTREAM_BRANCH
